Ci CONFIG inscrip